# clip-asos

./: CLIP_finetuning.ipynb  README.md  TSNE_analysis.ipynb  data_processing.py  download_images.py  post_training_analysis.ipynb  preprocessing.ipynb  pyproject.toml  train.py  training_tools.py
clip_asos/: train.py
pre_processing/: download_images.py
